tests/baselines/reference/parserForOfStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement1.d.ts (1 errors) ====
    for (var i of e) {
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    }